--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.3"
+    "react-error-boundary": "^4.0.3",
+    "react-spinners-kit": "^1.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
